# leadrboard

./: .gitignore  README.md
backend/: .env  README.md  black.sh  config.py  database.py  lint.sh  main.py  package-lock.json  package.json  pyproject.toml  pytest.sh  requirements.txt
backend/api/v1/endpoints/: interactions.py  (+4 more)
backend/app/: common_types.py  import_games.py  main.py  models.py
backend/app/api/: auth.py  feed.py  games.py  interactions.py  reviews.py  social.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/services/: import_games.py  recommendation.py
backend/core/: dependencies.py  security.py
backend/migrations/: README  env.py  script.py.mako
backend/migrations/versions/: 05a6de7e6033_add_relationships_to_game_reviews_and_.py  3b135f2b649d_remove_game_summary_character_limit.py  8a2cf73ae2b5_initial_migration.py  8f9b9a42adc7_try_again_to_remove_character_limits_.py  9750318537c4_add_game_model.py  9bb46b4e25d6_add_follow_capability.py  b841472dd9c3_try_again_to_remove_character_limits.py  c40be542f8ec_change_timezone_type_to_aware.py  e17e465cea37_initial_db_setup.py
backend/scripts/: lint.ps1  pytest.ps1
backend/src/: server.ts
backend/src/config/: db.ts
backend/src/controllers/: authController.ts  gameController.ts
backend/src/middleware/: authMiddleware.ts
backend/src/models/: Game.ts  User.ts
backend/src/routes/: gameRoutes.ts  userRoutes.ts
backend/tests/: conftest.py  test_feed.py  test_games.py  test_interactions.py  test_reviews.py  test_social.py  test_users.py
(+6 files in other folders)
