[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.31.0",
    "black>=25.11.0",
    "fastapi>=0.126.0",
    "pandas>=2.3.3",
    "pwdlib[argon2]>=0.2.1",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "ruff>=0.14.13",
    "scikit-learn>=1.6.1",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
